# trusted-firmware-m

./: CMakeLists.txt  CommonConfig.cmake
app/: CMakeLists.txt  os_wrapper_cmsis_rtos_v2.c  tfm_integ_test.c
cmake/Common/: CompilerDetermineCXX.cmake  CompilerGNUARMCommon.cmake
configs/: ConfigCoreIPC.cmake  ConfigCoreIPCTfmLevel2.cmake  ConfigDefault.cmake  ConfigRegression.cmake  ConfigRegressionIPC.cmake  ConfigRegressionIPCTfmLevel2.cmake
interface/include/os_wrapper/: thread.h
interface/src/: tfm_nspm_api.c
platform/ext/common/gcc/: tfm_common_s.ld  tfm_common_s.ld.template
test/suites/core/non_secure/: core_ns_positive_testsuite.c
